--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project2</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -43,7 +43,7 @@
           </form>
         </div>
         <div class="cards card2">
-          <p class="task-title">My Todo List</p>
+          <p class="task-title">My Todo List 2</p>
           <hr class="line" />
           <p class="task-body">&nbspCompleted Task</p>
           <form action="" class="check">
@@ -52,7 +52,25 @@
           </form>
         </div>
         <div class="cards card3">
-          <p class="task-title">My Todo List</p>
+          <p class="task-title">My Todo List 3</p>
+          <hr class="line" />
+          <p class="task-body">&nbspCompleted Task</p>
+          <form action="" class="check">
+            <input class="check-box" type="checkbox" name="task" id="task" />
+            <label for="task">Pending Task</label>
+          </form>
+        </div>
+        <div class="cards card4">
+          <p class="task-title">My Todo List 4</p>
+          <hr class="line" />
+          <p class="task-body">&nbspCompleted Task</p>
+          <form action="" class="check">
+            <input class="check-box" type="checkbox" name="task" id="task" />
+            <label for="task">Pending Task</label>
+          </form>
+        </div>
+        <div class="cards card4">
+          <p class="task-title">My Todo List 5</p>
           <hr class="line" />
           <p class="task-body">&nbspCompleted Task</p>
           <form action="" class="check">
