--- a/newlist.html
+++ b/newlist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project2</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -41,7 +41,7 @@
           </form>
         </div>
         <div class="cards card2">
-          <p class="task-title">My Todo List</p>
+          <p class="task-title">My Todo List 2</p>
           <hr class="line" />
           <p class="task-body">&nbspCompleted Task</p>
           <form action="" class="check">
@@ -50,7 +50,25 @@
           </form>
         </div>
         <div class="cards card3">
-          <p class="task-title">My Todo List</p>
+          <p class="task-title">My Todo List 3</p>
+          <hr class="line" />
+          <p class="task-body">&nbspCompleted Task</p>
+          <form action="" class="check">
+            <input class="check-box" type="checkbox" name="task" id="task" />
+            <label for="task">Pending Task</label>
+          </form>
+        </div>
+        <div class="cards card4">
+          <p class="task-title">My Todo List 4</p>
+          <hr class="line" />
+          <p class="task-body">&nbspCompleted Task</p>
+          <form action="" class="check">
+            <input class="check-box" type="checkbox" name="task" id="task" />
+            <label for="task">Pending Task</label>
+          </form>
+        </div>
+        <div class="cards card4">
+          <p class="task-title">My Todo List 5</p>
           <hr class="line" />
           <p class="task-body">&nbspCompleted Task</p>
           <form action="" class="check">
@@ -61,9 +79,15 @@
       </div>
     </div>
     <div class="new-list">
-      <form action="">
-        <label for="new">Add New List</label><br />
-        <input class="input list" type="text" name="new" id="new" /><br />
+      <form action="" class="form-new-list">
+        <label for="new" style="font-size: 28px">Add New List</label><br />
+        <input
+          class="input list"
+          type="text"
+          name="new"
+          id="new"
+          style="width: 130px"
+        /><br />
         <input class="input btn" type="button" value="ADD" />
       </form>
     </div>
