--- a/newtrip.html
+++ b/newtrip.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
-    <title>Project2</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
   <body>
     <div class="ui-trip ui-new-trip">
@@ -59,9 +59,15 @@
       </div>
     </div>
     <div class="new-list new-trip">
-      <form action="">
-        <label for="new">Add New List</label><br />
-        <input class="input list" type="text" name="new" id="new" /><br />
+      <form action="" class="form-new-trip">
+        <label for="new" style="font-size: 28px">Add New Todo</label><br />
+        <input
+          class="input list"
+          type="text"
+          name="new"
+          id="new"
+          style="width: 130px"
+        /><br />
         <input class="input btn" type="button" value="ADD" />
       </form>
     </div>
