--- a/trip.html
+++ b/trip.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
-    <title>Project2</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
   <body>
     <div class="ui-trip">
@@ -40,9 +40,9 @@
       <div class="container-card-trip">
         <div class="cards card1 card-trip">
           <p class="task-title task-title-trip">Trip to Paris</p>
-          <hr class="line" />
+          <hr class="line line-trip" />
           <p class="task-body task-body-trip">&nbspCompleted Task</p>
-          <form action="" class="check">
+          <form action="" class="check check-trip">
             <input class="check-box" type="checkbox" name="task" id="task" />
             <label for="task">Pending Task</label>
           </form>
