--- a/index.html
+++ b/index.html
@@ -5,40 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="wrapper" class="ui">
-      <div class="container">
-        <div class="head-container">
-          <div class="title left-title">
-            <p>
-              <span style="font-weight: bolder">Tasks</span>
-              <span style="font-weight: 100">Lists</span>
-            </p>
-          </div>
-          <div class="title right-title">
-            <a href="./newlist.html">
-              <div class="add add-logo">
-                <div class="circle"></div>
-                <div class="plus">
-                  <div class="ver"></div>
-                  <div class="hor"></div>
-                </div>
-              </div>
-            </a>
-            <a href="./newlist.html">
-              <div class="add add-text"><span>Add List</span></div>
-            </a>
-          </div>
+    <div class="ui">
+      <div class="head-container">
+        <div class="title left-title">
+          <p>
+            <span style="font-weight: bolder">Tasks</span
+            ><span style="font-weight: 100">Lists</span>
+          </p>
         </div>
-        <ul class="card_list">
-          <li class="cards"><a href="newlist.html">Trip To Paris</a></li>
-          <li class="cards">My ToDo List2</li>
-          <li class="cards">My ToDo List3</li>
-          <li class="cards">My ToDo List4</li>
-          <li class="cards">My ToDo List5</li>
-        </ul>
+        <div class="title right-title">
+          <a href="./newlist.html">
+            <div class="add add-logo">
+              <div class="circle"></div>
+              <div class="plus">
+                <div class="ver"></div>
+                <div class="hor"></div>
+              </div></div
+          ></a>
+          <a href="./newlist.html">
+            <div class="add add-text"><span>Add List</span></div></a
+          >
+        </div>
+      </div>
+      <div class="cards-container">
+        <div class="cards card1">
+          
+            <p class="task-title"><a href="./trip.html" style="color: inherit; text-decoration: none">Trip to Paris</p>
+          </a>
+          <hr class="line" />
+          <p class="task-body">&nbspCompleted Task</p>
+          <form action="" class="check">
+            <input class="check-box" type="checkbox" name="task" id="task" />
+            <label for="task">Pending Task</label>
+          </form>
+        </div>
+        <div class="cards card2">
+          <p class="task-title">My Todo List 2</p>
+          <hr class="line" />
+          <p class="task-body">&nbspCompleted Task</p>
+          <form action="" class="check">
+            <input class="check-box" type="checkbox" name="task" id="task" />
+            <label for="task">Pending Task</label>
+          </form>
+        </div>
+        <div class="cards card3">
+          <p class="task-title">My Todo List 3</p>
+          <hr class="line" />
+          <p class="task-body">&nbspCompleted Task</p>
+          <form action="" class="check">
+            <input class="check-box" type="checkbox" name="task" id="task" />
+            <label for="task">Pending Task</label>
+          </form>
+        </div>
+        <div class="cards card4">
+          <p class="task-title">My Todo List 4</p>
+          <hr class="line" />
+          <p class="task-body">&nbspCompleted Task</p>
+          <form action="" class="check">
+            <input class="check-box" type="checkbox" name="task" id="task" />
+            <label for="task">Pending Task</label>
+          </form>
+        </div>
+        <div class="cards card4">
+          <p class="task-title">My Todo List 5</p>
+          <hr class="line" />
+          <p class="task-body">&nbspCompleted Task</p>
+          <form action="" class="check">
+            <input class="check-box" type="checkbox" name="task" id="task" />
+            <label for="task">Pending Task</label>
+          </form>
+        </div>
       </div>
     </div>
   </body>
